--- a/src/css/main_linye.css
+++ b/src/css/main_linye.css
@@ -4,7 +4,7 @@ body {
   color: #000;
   margin: 0;
 }
-::-webkit-scrollbar {
+.linye-body ::-webkit-scrollbar {
   width: 0px;
 }
 
@@ -118,12 +118,12 @@ a {
 }
 .linye-ranking-points .wrap {
   background: #fafafb;
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .linye-body {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
 }
 
 .linye-ranking-points .head-tab {
@@ -145,6 +145,7 @@ a {
   padding-left: 34px;
   font-size: 18px;
   color: rgba(153, 153, 153, 1);
+  margin-top: 15px;
 }
 
 .linye-ranking-points .tab-item {
@@ -230,6 +231,15 @@ a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.linye-ranking-points .middle-table-body {
+  width: 100%;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  background: #fff;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
 .linye-ranking-points .table-my {
@@ -408,6 +418,10 @@ a {
           align-items: center;
 }
 
+.linye-ranking-points .tr:last-child {
+  border-radius: 0, 0, 8px, 8px;
+}
+
 .linye-ranking-points .tr-even {
   background: #fbfbfb;
 }
@@ -497,6 +511,7 @@ a {
   border-radius: 8px;
   padding: 0 30px 0 34px;
   margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .linye-shopping .user-face {
@@ -683,7 +698,7 @@ a {
 }
 
 .linye-shopping .page-input {
-  min-width: 28px;
+  width: 28px;
   height: 28px;
   border-radius: 4px;
   border: 1px solid rgba(235, 235, 235, 1);
@@ -764,6 +779,13 @@ a {
   vertical-align: middle;
 }
 
+.linye-personal-data .edit-list {
+  font-size: 16px;
+  color: #fff;
+  line-height: 22px;
+  vertical-align: middle;
+}
+
 .linye-personal-data .edit-icon {
   width: 16px;
   height: 16px;
@@ -778,7 +800,7 @@ a {
   border-radius: 18px;
   font-size: 16px;
   color: rgba(255, 255, 255, 1);
-  line-height: 32px;
+  line-height: 36px;
   text-align: center;
   position: absolute;
   top: 16px;
@@ -797,13 +819,19 @@ a {
 }
 
 .linye-personal-data .data-detail2 {
-  width: 100%;
+  width: 1200px;
   height: 577px;
   background: #fff;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
-  border-radius: 0, 0, 8px, 8px;
+  border-radius: 0px, 0px, 8px, 8px;
   position: relative;
+}
+.linye-personal-data .middle-body {
+  width: 1200px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  border-radius: 8px;
 }
 
 .linye-personal-data .data-detail .title {
@@ -1068,6 +1096,8 @@ a {
       -ms-flex-align: center;
           align-items: center;
   padding-top: 103px;
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
 }
 
 .linye-change-password .progress-top {
@@ -1287,6 +1317,7 @@ a {
   -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
           box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
   border-radius: 8px;
+  margin-bottom: 10px;
 }
 .linye-honour .certificate-head {
   width: 100%;
@@ -1392,6 +1423,7 @@ a {
   height: 600px;
   width: 687px;
   background: #fff;
+  border-radius: 0, 0, 8px, 0;
 }
 .linye-honour .rank {
   margin-top: 15px;
@@ -1431,6 +1463,8 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   padding-top: 100px;
+  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
+          box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, .05);
 }
 .linye-honour .rank-img-list1 {
   text-align: center;
@@ -2255,4 +2289,84 @@ a {
 }
 .linye-learn .study-finish-text {
   color: #0085e6;
+}
+.linye-learn .submit-result {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: 15px;
+}
+.linye-learn .submit-result .questions{
+  width: 50%;
+  margin-top: 40px;
+}
+.linye-learn .true-result {
+  background: rgba(51, 203, 180, 1);
+  position: relative;
+}
+.linye-learn .true-result:after {
+  content: ' ';
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+.linye-learn .false-result {
+  background: rgba(255, 69, 72, 1);
+  position: relative;
+}
+.linye-learn .false-result::after {
+  content: ' ';
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+.linye-learn .false-icon {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-left: 20px;
+}
+.linye-learn .true-icon {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-left: 20px;
+}
+.linye-learn .true-input::-webkit-input-placeholder {
+  color: rgba(51, 203, 180, 1);
+}
+.linye-learn .true-input:-ms-input-placeholder {
+  color: rgba(51, 203, 180, 1);
+}
+.linye-learn .true-input::-ms-input-placeholder {
+  color: rgba(51, 203, 180, 1);
+}
+.linye-learn .true-input::placeholder {
+  color: rgba(51, 203, 180, 1);
+}
+.linye-learn .false-input::-webkit-input-placeholder {
+  color: rgba(255, 69, 72, 1);
+}
+.linye-learn .false-input:-ms-input-placeholder {
+  color: rgba(255, 69, 72, 1);
+}
+.linye-learn .false-input::-ms-input-placeholder {
+  color: rgba(255, 69, 72, 1);
+}
+.linye-learn .false-input::placeholder {
+  color: rgba(255, 69, 72, 1);
 }
