--- a/src/less/main_linye.less
+++ b/src/less/main_linye.less
@@ -4,7 +4,7 @@ body {
   color: #000;
   margin: 0;
 }
-::-webkit-scrollbar {
+.linye-body ::-webkit-scrollbar {
   width: 0px;
 }
 
@@ -125,12 +125,12 @@ a {
 }
 .linye-ranking-points .wrap {
   background: #fafafb;
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 .linye-body {
   width: 1200px;
-  margin: 0 auto;
+  margin: 0 auto 10px auto;
 }
 
 .linye-ranking-points .head-tab {
@@ -147,6 +147,7 @@ a {
   padding-left: 34px;
   font-size: 18px;
   color: rgba(153, 153, 153, 1);
+  margin-top: 15px;
 }
 
 .linye-ranking-points .tab-item {
@@ -221,6 +222,14 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.linye-ranking-points .middle-table-body {
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .05);
+  background: #fff;
+  border-radius: 8px;
+  margin-bottom: 10px;
 }
 
 .linye-ranking-points .table-my {
@@ -378,6 +387,10 @@ a {
   align-items: center;
 }
 
+.linye-ranking-points .tr:last-child {
+  border-radius: 0, 0, 8px, 8px;
+}
+
 .linye-ranking-points .tr-even {
   background: #fbfbfb;
 }
@@ -455,6 +468,7 @@ a {
   border-radius: 8px;
   padding: 0 30px 0 34px;
   margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .linye-shopping .user-face {
@@ -619,7 +633,7 @@ a {
 }
 
 .linye-shopping .page-input {
-  min-width: 28px;
+  width: 28px;
   height: 28px;
   border-radius: 4px;
   border: 1px solid rgba(235, 235, 235, 1);
@@ -691,6 +705,13 @@ a {
   vertical-align: middle;
 }
 
+.linye-personal-data .edit-list {
+  font-size: 16px;
+  color: #fff;
+  line-height: 22px;
+  vertical-align: middle;
+}
+
 .linye-personal-data .edit-icon {
   width: 16px;
   height: 16px;
@@ -705,7 +726,7 @@ a {
   border-radius: 18px;
   font-size: 16px;
   color: rgba(255, 255, 255, 1);
-  line-height: 32px;
+  line-height: 36px;
   text-align: center;
   position: absolute;
   top: 16px;
@@ -723,12 +744,17 @@ a {
 }
 
 .linye-personal-data .data-detail2 {
-  width: 100%;
+  width: 1200px;
   height: 577px;
   background: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
-  border-radius: 0, 0, 8px, 8px;
+  border-radius: 0px, 0px, 8px, 8px;
   position: relative;
+}
+.linye-personal-data .middle-body {
+  width: 1200px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
+  border-radius: 8px;
 }
 
 .linye-personal-data .data-detail .title {
@@ -947,6 +973,7 @@ a {
   flex-direction: column;
   align-items: center;
   padding-top: 103px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.05);
 }
 
 .linye-change-password .progress-top {
@@ -1135,6 +1162,7 @@ a {
   margin-top: 15px;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
+  margin-bottom: 10px;
 }
 .linye-honour .certificate-head {
   width: 100%;
@@ -1231,6 +1259,7 @@ a {
   height: 600px;
   width: 687px;
   background: #fff;
+  border-radius: 0, 0, 8px, 0;
 }
 .linye-honour .rank {
   margin-top: 15px;
@@ -1258,6 +1287,7 @@ a {
   align-items: center;
   flex-direction: column;
   padding-top: 100px;
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.05);
 }
 .linye-honour .rank-img-list1 {
   text-align: center;
@@ -1993,4 +2023,61 @@ a {
 }
 .linye-learn .study-finish-text {
   color: #0085e6;
+}
+.linye-learn .submit-result {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 15px;
+}
+.linye-learn .submit-result .questions{
+  width: 50%;
+  margin-top: 40px;
+}
+.linye-learn .true-result {
+  background: rgba(51, 203, 180, 1);
+  position: relative;
+}
+.linye-learn .true-result:after {
+  content: ' ';
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+.linye-learn .false-result {
+  background: rgba(255, 69, 72, 1);
+  position: relative;
+}
+.linye-learn .false-result::after {
+  content: ' ';
+  width: 4px;
+  height: 4px;
+  background: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+.linye-learn .false-icon {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-left: 20px;
+}
+.linye-learn .true-icon {
+  width: 25px;
+  height: 25px;
+  vertical-align: middle;
+  margin-left: 20px;
+}
+.linye-learn .true-input::placeholder {
+  color: rgba(51, 203, 180, 1);
+}
+.linye-learn .false-input::placeholder {
+  color: rgba(255, 69, 72, 1);
 }
